[project]
name = "homelab"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan SAKKRIOU"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "diagrams (>=0.24.1,<0.25.0)"
]

[tool.poetry]
packages = [{include = "homelab"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
